--- a/Cesium3DTile/NewYork3DTileset/index.html
+++ b/Cesium3DTile/NewYork3DTileset/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Use correct character set. -->
-    <meta charset="utf-8">
-    <!-- Tell IE to use the latest, best version. -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>New York</title>
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/CesiumUnminified/Cesium.js"></script>
-    <link href="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-</head>
-<body>
-<div id="cesiumContainer" class="fullSize"></div>
-<div id="toolbar">
-</div>
+    <head>
+        <!-- Use correct character set. -->
+        <meta charset="utf-8" />
+        <!-- Tell IE to use the latest, best version. -->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+        />
+        <title>New York</title>
+        <script src="https://cesium.com/downloads/cesiumjs/releases/1.129/Build/CesiumUnminified/Cesium.js"></script>
+        <link
+            href="https://cesium.com/downloads/cesiumjs/releases/1.129/Build/Cesium/Widgets/widgets.css"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div id="cesiumContainer" class="fullSize"></div>
+        <div id="toolbar"></div>
 
-<script>
-    Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIxMDVmZDZlOS1jNzYxLTQ3MWYtYmNlNi0xMzA4NjA1OTc1NDgiLCJpZCI6OTc4NiwiaWF0IjoxNjE3MTU2MTQ2fQ.vtM1I7acSXgL6riYVHUMz_lWeaCESiUOeYXVM2lft50";
+        <script>
+            Cesium.Ion.defaultAccessToken =
+                "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIxMDVmZDZlOS1jNzYxLTQ3MWYtYmNlNi0xMzA4NjA1OTc1NDgiLCJpZCI6OTc4NiwiaWF0IjoxNjE3MTU2MTQ2fQ.vtM1I7acSXgL6riYVHUMz_lWeaCESiUOeYXVM2lft50";
 
-    const viewer = new Cesium.Viewer('cesiumContainer', {
+            const viewer = new Cesium.Viewer("cesiumContainer", {});
 
-    });
+            var tileset = new Cesium.Cesium3DTileset({
+                url: Cesium.IonResource.fromAssetId(75343)
+            });
 
-    var tileset = new Cesium.Cesium3DTileset({
-        url: Cesium.IonResource.fromAssetId(75343),
-    });
+            viewer.scene.primitives.add(tileset);
 
-    viewer.scene.primitives.add(tileset);
+            tileset.readyPromise
+                .then(function () {
+                    viewer.zoomTo(
+                        tileset,
+                        new Cesium.HeadingPitchRange(0.0, -0.5, tileset.boundingSphere.radius / 4.0)
+                    );
 
-    tileset.readyPromise.then(function () {
-        viewer.zoomTo(
-            tileset,
-            new Cesium.HeadingPitchRange(
-                0.0,
-                -0.5,
-                tileset.boundingSphere.radius / 4.0
-            )
-        );
+                    var transparentStyle = new Cesium.Cesium3DTileStyle({
+                        color: "color('white', 0.3)",
+                        show: true
+                    });
 
-        var transparentStyle = new Cesium.Cesium3DTileStyle({
-            color : "color('white', 0.3)",
-            show : true
-        });
-
-        tileset.style = transparentStyle;
-
-    }).catch(function(err) {
-        console.error(err.message);
-    });
-</script>
-</body>
+                    tileset.style = transparentStyle;
+                })
+                .catch(function (err) {
+                    console.error(err.message);
+                });
+        </script>
+    </body>
 </html>
